force-app/main/default/objects/Marketing__e/Marketing__e.object-meta.xml
<CustomObject>
    <label>MarketingLeadNotification__e</label>
    <pluralLabel>MarketingLeadNotifications__e</pluralLabel>
</CustomObject>