force-app/main/default/objects/Marketing__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>64</length>
    <type>Text</type>
</CustomField>